methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:13: error: Boolean does not take parameters
      return biscuit()
                    ^